kubernetes/apps/network/smtp-relay/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: smtp-relay-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: smtp-relay
    egress:
      - toFQDNs:
          - matchName: smtp.migadu.com
        toPorts:
          - ports:
              - port: "587"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: smtp-relay-egress-label
specs:
  - endpointSelector:
      matchLabels:
        egress.cilium.io/smtp-relay: "true"
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: smtp-relay
        toPorts:
          - ports:
              - port: "25"
